--- a/aDVanceERP.Desktop/MVP/Vistas/ContenedorModulos/VistaContenedorModulos.resx
+++ b/aDVanceERP.Desktop/MVP/Vistas/ContenedorModulos/VistaContenedorModulos.resx
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <root>
   <!--
-    Microsoft ResX Schema 
+    Microsoft ResX Schema
 
     Version 2.0
 
@@ -48,7 +48,7 @@
     value   : The object must be serialized with
             : System.Runtime.Serialization.Formatters.Binary.BinaryFormatter
             : and then encoded with base64 encoding.
-    
+
     mimetype: application/x-microsoft.net.object.soap.base64
     value   : The object must be serialized with
             : System.Runtime.Serialization.Formatters.Soap.SoapFormatter
@@ -186,6 +186,23 @@
   </data>
   <data name="resource.Image5" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAKrSURBVEhLpVZPiI1RFH+MwkJSSvQa893fOfeea8iKZDVkxcpWkdBYkFhJKEoRppQkCSklZRak
+        sVCyoRSZlBQ1DBHJZiaUMejc70/33ffmzdT86lfvnnO+3/nuOec7vVqtGR3CuCmMV55oTeqcNpw1F4Tx
+        TxjfHJsXqX9acIzDQZxwNk9E39Xuma6IxbNJyXgiwNpUN0AseoXxVwjXnXPzVNxb3FKfJwyExBaPhfGg
+        Nc2QxjhgXapd8xabhfFHGHd6enpmOcY+DbbWrFK/tdnqvGxmS/psifwl6HWtVpvR6DCGhTEijEddXV1z
+        go1xsehDO/4QpttENFufEYuHesMG8eBg3BPG1+VZtqi06W9PdMCTOVjSMU47ZEfKs/apSLQ96Fg6JIzx
+        8tZxghHPONdgjNANkFg66SydKilk+jzT06IvvRpnjJkvjGEd73q9PrcSyIPoWCwawxNtDc1vLlFB01/G
+        Oof1+aCYvkpgsgTtEMaXMRLbhOmqMH55v3RxYWifYPIb4GPZaIWIsUXp9uYGxrhYOh6LxtAexM2uyDha
+        DEjV6BLCeCdMN8rD5+owAYSxu2ywJxqwjP78nK8VR2ZHEv9cGHlvhHFJGD/1anFQDGG8bVEa5Vj8LUTx
+        w45wORycc0uE8UWp9dY1EQe3wMw8obmbOhTOZU6Te0t7KmM30TIhvGzxhhOyQSCCflO6dqopitChi8qT
+        2R83UxhvxGLUIztR2a3ZkD6ssDZbKYzfWvbUNyGKK4/qrrHWLlzR2bmgFYsv+ZqOrcalOg3QpadTkC+0
+        5vJMjWbIW7Mx1Q7wRDuLwDPx3OtKbsc4XpgGhfA+1Q7wlnaFBITz8ZJrWHgW97XWqb3yMw06xodUOyAq
+        0Vjz1afMT57NplR7yggibXbYtBH+1lhsS+0p/gOG1l96bwjCKgAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="resource.Image6" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
         iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAlpJREFUSEvV
         lc+PTEEQx98MNxK/b7Jmuqq6683LTDYOJBzMkYM4EU6EA05+BTcRHIQg4ebHjZC4S5wIN+EfINzI3tlw
         YeXb773ZfmV3ze6JT9KZ1Lerq7uq+9Vk2b+Aqq7LmY/k7M7jtyg2rrU+S8Z72qVCUyo0k4ypQLTT+i4a
@@ -200,7 +217,7 @@
         v8/LAAAAAElFTkSuQmCC
 </value>
   </data>
-  <data name="resource.Image6" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="resource.Image7" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAllJREFUSEvN
         VUuPDUEU7vH4Ax6JxzBz6zun6tRtK9duiLvBeETY20nsBguWI5MY4zewNsZOYiGEhJUEwc4jHmPFAolX
