Correcciones de errores generales. Cambios en el campo de precios de los productos

--- a/aDVanceERP.Modulos.Inventario/MVP/Vistas/Producto/VistaRegistroProductoP2.resx
+++ b/aDVanceERP.Modulos.Inventario/MVP/Vistas/Producto/VistaRegistroProductoP2.resx
@@ -171,7 +171,7 @@
         YII=
 </value>
   </data>
-  <data name="fieldPrecioCompraBase.IconRight" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="fieldCostoUnitario.IconRight" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAAwAAAAMCAYAAABWdVznAAAABGdBTUEAALGPC/xhBQAAAOVJREFUKFN1
         0DFKBEEQheE1ENQjDAPOzqvX9RrDjgTxCiaairGR0Z5BDIx3T6Ch6AVEMDAwMBRMzERBryAdzDLdrh90
