--- a/aDVanceERP.Modulos.Taller/Vistas/OrdenProduccion/VistaGestionOrdenesProduccion.resx
+++ b/aDVanceERP.Modulos.Taller/Vistas/OrdenProduccion/VistaGestionOrdenesProduccion.resx
@@ -121,6 +121,23 @@
     <value>17, 17</value>
   </metadata>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="fieldIcono.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAqtJREFUSEul
+        Vk+IjVEUf4zCQlJK9Brz3d85955ryIpkNWTFylaR0FiQWEkoShGmlCQJKSVlFqSxULKhFJmUFDUMEclm
+        JpQx6NzvT/fd9+bN1PzqV++ec77f+e455zu9Wq0ZHcK4KYxXnmhN6pw2nDUXhPFPGN8cmxepf1pwjMNB
+        nHA2T0Tf1e6ZrojFs0nJeCLA2lQ3QCx6hfFXCNedc/NU3FvcUp8nDITEFo+F8aA1zZDGOGBdql3zFpuF
+        8UcYd3p6emY5xj4NttasUr+12eq8bGZL+myJ/CXoda1Wm9HoMIaFMSKMR11dXXOCjXGx6EM7/hCm20Q0
+        W58Ri4d6wwbx4GDcE8bX5Vm2qLTpb090wJM5WNIxTjtkR8qz9qlItD3oWDokjPHy1nGCEc8412CM0A2Q
+        WDrpLJ0qKWT6PNPToi+9GmeMmS+MYR3ver0+txLIg+hYLBrDE20NzW8uUUHTX8Y6h/X5oJi+SmCyBO0Q
+        xpcxEtuE6aowfnm/dHFhaJ9g8hvgY9lohYixRen25gbGuFg6HovG0B7Eza7IOFoMSNXoEsJ4J0w3ysPn
+        6jABhLG7bLAnGrCM/vycrxVHZkcS/1wYeW+EcUkYP/VqcVAMYbxtURrlWPwtRPHDjnA5HJxzS4TxRan1
+        1jURB7fAzDyhuZs6FM5lTpN7S3sqYzfRMiG8bPGGE7JBIIJ+U7p2qimK0KGLypPZHzdTGG/EYtQjO1HZ
+        rdmQPqywNlspjN9a9tQ3IYorj+qusdYuXNHZuaAViy/5mo6txqU6DdClp1OQL7Tm8kyNZshbszHVDvBE
+        O4vAM/Hc60puxzhemAaF8D7VDvCWdoUEhPPxkmtYeBb3tdapvfIzDTrGh1Q7ICrRWPPVp8xPns2mVHvK
+        CCJtdti0Ef7WWGxL7Sn+A4bWX3pvCMIqAAAAAElFTkSuQmCC
+</value>
+  </data>
   <data name="fieldDatoBusqueda.IconLeft" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAABGdBTUEAALGPC/xhBQAAAYZJREFUOE/V
@@ -142,23 +159,6 @@
         /8X4zbhW4j2F4sh725mzTJ0vGVFV1WJqo1LiS4NcJhZ9m0hcKfFpzjL+birdgIZS3pR4GI+82c7nakNy
         W4nvUmTPxp5t53O1ma9CJQ7t+VRky+dqMykc/8D4SAHnPjMTk8JIeVaRfe//w0IkWp1OZ9OL+eUHOdLT
         5QhoWVEAAAAASUVORK5CYII=
-</value>
-  </data>
-  <data name="fieldIcono.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAqtJREFUSEul
-        Vk+IjVEUf4zCQlJK9Brz3d85955ryIpkNWTFylaR0FiQWEkoShGmlCQJKSVlFqSxULKhFJmUFDUMEclm
-        JpQx6NzvT/fd9+bN1PzqV++ec77f+e455zu9Wq0ZHcK4KYxXnmhN6pw2nDUXhPFPGN8cmxepf1pwjMNB
-        nHA2T0Tf1e6ZrojFs0nJeCLA2lQ3QCx6hfFXCNedc/NU3FvcUp8nDITEFo+F8aA1zZDGOGBdql3zFpuF
-        8UcYd3p6emY5xj4NttasUr+12eq8bGZL+myJ/CXoda1Wm9HoMIaFMSKMR11dXXOCjXGx6EM7/hCm20Q0
-        W58Ri4d6wwbx4GDcE8bX5Vm2qLTpb090wJM5WNIxTjtkR8qz9qlItD3oWDokjPHy1nGCEc8412CM0A2Q
-        WDrpLJ0qKWT6PNPToi+9GmeMmS+MYR3ver0+txLIg+hYLBrDE20NzW8uUUHTX8Y6h/X5oJi+SmCyBO0Q
-        xpcxEtuE6aowfnm/dHFhaJ9g8hvgY9lohYixRen25gbGuFg6HovG0B7Eza7IOFoMSNXoEsJ4J0w3ysPn
-        6jABhLG7bLAnGrCM/vycrxVHZkcS/1wYeW+EcUkYP/VqcVAMYbxtURrlWPwtRPHDjnA5HJxzS4TxRan1
-        1jURB7fAzDyhuZs6FM5lTpN7S3sqYzfRMiG8bPGGE7JBIIJ+U7p2qimK0KGLypPZHzdTGG/EYtQjO1HZ
-        rdmQPqywNlspjN9a9tQ3IYorj+qusdYuXNHZuaAViy/5mo6txqU6DdClp1OQL7Tm8kyNZshbszHVDvBE
-        O4vAM/Hc60puxzhemAaF8D7VDvCWdoUEhPPxkmtYeBb3tdapvfIzDTrGh1Q7ICrRWPPVp8xPns2mVHvK
-        CCJtdti0Ef7WWGxL7Sn+A4bWX3pvCMIqAAAAAElFTkSuQmCC
 </value>
   </data>
   <data name="resource.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
@@ -233,6 +233,19 @@
         iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAABGdBTUEAALGPC/xhBQAAAGVJREFUOE9j
         YBgWQENNpQqE0cXJBhqqyvNBGF2cbDBqIOWALAM1VJTqNNWUV2HDGmpK90EYXRwur6JUh24eJK2pKs/E
         ilWUb4IxujgMq6lUopuHF5DlZXxg1EDKAfUNpHbxNaAAAJUdP7Ik26u6AAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="fieldTituloFiltroAlmacen.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAABGdBTUEAALGPC/xhBQAAAZ1JREFUOE/V
+        U71KXEEYXUgaW6uQCAl5EYVYa7W+wBLjnJkz7sw3KlhtG8k7xJewsIlNEiEp00RBRAQVG0ESoqCsfDO7
+        MntJgjb5OXDYM+ec+3Hv8G2r9d8jOjMjxCchviRvZ5v5ndHr9R6Kx2shrsqvWRPiWnW73X7Q7P8WYu3T
+        RHwW4jjQTA591UKcRJr3y849Hn3qF0g004k4FeJjCAtPmvkyOSHEtnaity+a+QiSt3NCeynE2xDCWDMf
+        QjNxdl270Zl2M8/odheeReJ79Ei1H0JnPATzvLAzXmeJdkmIb3pFtZ8RiVdCfK09cVgU4ocQ/UJ7Gb2J
+        Ix1iR7yZr72M5NETmq3aE+JQHMLwDRNtV4ij0Y7Z0mdrL+NnA/PFV3ekWr2683cGJuJl/lziQjzOo7dn
+        StXqRdqD5NC580AhzhLNStnJvJebheUstKvauc/AfnJuapjpXipvu85Naadkf2qgLrQQu7pTg717k3Um
+        PhQOzpppp+gd3dfmvJb+2ZPDhjjsCc2REPtZF+o+KstZM+0U/W4JeNSc9+/iBqQ/MlhWrBRuAAAAAElF
+        TkSuQmCC
 </value>
   </data>
 </root>
