--- a/aDVanceERP.Desktop/Properties/Resources.resx
+++ b/aDVanceERP.Desktop/Properties/Resources.resx
@@ -118,16 +118,25 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="best_sales_96px" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\best_sales_96px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="productE_96px" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\productE_96px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="best_sales_96px" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\best_sales_96px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="accountF_96px" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\accountF_96px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="bar_chartF_96px" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\bar_chartF_96px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="empresa1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\empresa1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="empresa2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\empresa2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="empresa3" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\empresa3.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
