--- a/aDVanceERP.Modulos.Inventario/Properties/Resources.resx
+++ b/aDVanceERP.Modulos.Inventario/Properties/Resources.resx
@@ -118,13 +118,19 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="load_cargo_20px" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\load_cargo_20px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="transfer_20px" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\transfer_20px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="load_cargo_20px" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\load_cargo_20px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="unload_cargo_20px" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\unload_cargo_20px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="pictureF_96px" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\pictureF_96px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="picture_170px" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\picture_170px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
